--- a/kaggle_house_prices.ipynb
+++ b/kaggle_house_prices.ipynb
@@ -271,7 +271,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'kaggle.json': b'{\"username\":\"matthewarthur\",\"key\":\"5260552adff43f7577335a272a550902\"}'}"
+              "{'kaggle.json': b'{\"username\":\"\",\"key\":\"\"}'}"
             ]
           },
           "metadata": {
